--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
  :root {
       --laranja-escuro: #c7662f; /* cor mais escura de #df7e38 */
-      --marrom: #5e2c1d;
+      --marrom: #d88870;
       --roxo-escuro: #1a1120;
     }
 
